--- a/Chats.kv
+++ b/Chats.kv
@@ -17,13 +17,15 @@
     pos_hint: {"x": .02}
     height: self.texture_size[1]
     padding: 12, 10
+    theme_text_color: "Custom"
+    text_color: 1, 1, 1, 1
     canvas.before:
         Color:
-            rgb: (1, 1, 1, 1)
+            rgb: (49/255, 0/255, 229/255, 1)
         RoundedRectangle:
             size: self.width, self.height
             pos: self.pos
-            radius: [44, 44, 44, 0]
+            radius: [23, 23, 23, 0]
 MDScreen:
     bot_name: bot_name
     text_input: text_input
@@ -32,9 +34,25 @@ MDScreen:
     name: "chats"
     MDFloatLayout:
         MDFloatLayout:
-            md_bg_color: 245/255, 245/255, 245/255, 1
+            md_bg_color: 0, 0, 0, 0
             size_hint_y: .11
             pos_hint: {"center_y": .95}
+            canvas:
+                Color:
+                    rgb: (238/255, 238/255, 238/255, 1)
+                RoundedRectangle:
+                    size: self.size
+                    pos: self.pos
+                    radius: [34, 34, 34, 34]
+            MDIconButton:
+                icon: "arrow-left"
+                pos_hint: {"center_y": .50}
+                user_font_size: "30sp"
+                theme_text_color: "Custom"
+                text_color: rgba(26, 24, 58, 255)
+                on_release:
+                    root.manager.transition.direction = "right"
+                    root.manager.current = "check"
             MDLabel:
                 id: bot_name
                 text: ""
@@ -42,7 +60,7 @@ MDScreen:
                 halign: "center"
                 font_size: "25sp"
                 theme_text_color: "Custom"
-                text_color: 53/255, 56/255, 60/255, 1
+                text_color: 49/255, 0/255, 229/255, 1
         ScrollView:
             id: scroll_view
             size_hint_y: .77
@@ -81,7 +99,7 @@ MDScreen:
                     height: self.minimum_height
                     cursor_color: 1, 170/255, 23/255, 1
                     cursor_width: "2sp"
-                    foreground_color: 1, 170/255, 23/255, 1
+                    foreground_color: 49/255, 0/255, 229/255, 1
                     background_color: 0, 0, 0, 0
                     padding: 15
             MDIconButton:
@@ -90,7 +108,7 @@ MDScreen:
                 user_font_sie: "18sp"
                 theme_text_color: "Custom"
                 text_color: 1, 1, 1, 1
-                md_bg_color: 1, 170/255, 23/255, 1
+                md_bg_color: 49/255, 0/255, 229/255, 1
                 on_release: app.send()
 
             
