--- a/Camera.kv
+++ b/Camera.kv
@@ -37,4 +37,5 @@ CameraScreen:
                 root.take_picture()
                 root.manager.transition.direction = "right"
                 root.manager.current = "check"
+                app.show_dialog()
   
