--- a/Camera.kv
+++ b/Camera.kv
@@ -22,11 +22,13 @@ CameraScreen:
                 halign: "center"
                 font_size: "25sp"
                 theme_text_color: "Custom"
-                text_color: 49/255, 0/255, 229/255, 1
+                text_color: 49/255, 0/255, 229/255, 1 
+               
         Camera:
             id: camera
-            resolution: (900, 768)
-            play: True
+            resolution: (900, 900)
+            play: False
+            size_hint: 1, 0.9
         MDRaisedButton:
             id: capture
             text: "capture"
@@ -34,7 +36,7 @@ CameraScreen:
             size_hint_x: .15
             pos_hint: {"center_x": .5, "center_y": .07}
             on_release: 
-                root.take_picture()
+                #root.take_picture()
                 root.manager.transition.direction = "right"
                 root.manager.current = "check"
                 app.show_dialog()
