--- a/Camera.kv
+++ b/Camera.kv
@@ -38,7 +38,7 @@ CameraScreen:
             size_hint_x: .15
             pos_hint: {"center_x": .5, "center_y": .07}
             on_release: 
-                #root.take_picture()
+                root.capture_photo()
                 root.manager.transition.direction = "right"
                 root.manager.current = "check"
                 app.show_dialog()
